--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Athena Jekyll Theme
-description: A simple and elegant theme for Jekyll and GitHub Pages.
-social_link: twitter
+title: Fresh Delights Catering
+description: 'A Healthy Catering Company in Hinckley '
+social_link: twitter/Freshhealthy17
 social_username: broccolini
 github_repo: athena
 github_username: broccolini
