--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Fresh Delights Catering
 description: 'A Healthy Catering Company in Hinckley '
 social_link: twitter/Freshhealthy17
-social_username: broccolini
+social_username: freshdelights17
 github_repo: athena
 github_username: broccolini
 theme_color: light
